--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://martinllobell.github.io/portafolio" ,
+  "homepage":"https://martinllobell.github.io/portafolio/" ,
   "name": "my-portafolio",
   "version": "0.1.0",
   "private": true,
